samples/_failures_safe/1761191730_3a26a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b66fb23.c: In function ‘read_punctuation’:
./samples/SAFE/__tmp_5b66fb23.c:165:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  165 |     char buffer
      |     ^~~~
./samples/SAFE/__tmp_5b66fb23.c:165:5: error: expected declaration or statement at end of input
